2005-03-29  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/colorbutton.py:
	* kiwi/ui/widgets/fontbutton.py:
	Add proxy widgets for gtk.ColorButton and gtk.FontButton.
	Fixes #2511

2006-03-29  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/gazpacholoader.py:
	* po/kiwi.pot:
	* po/pt_BR.po:
	* po/sv.po:
	pt_BR translation

2006-03-29  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/widgets/spinbutton.py: No need to press enter to notify that
	the value of the spinbutton changed.
	* tests/test_proxy.py: Fixing some tests and adding new ones.

2006-03-28  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* examples/framework/diary/diary2.py: When the list is empty, pass None
	to proxy.set_model
	* examples/framework/news/news4.py: Fixing methods, so they work
	properly with both callbacks and keyactions.

2006-03-26  Johan Dahlin  <jdahlin@async.com.br>
	
	* kiwi/desktopparser.py: Add a GKeyFile inspired .desktop parser

2006-03-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	In ProxyComboEntry, only listen to content-changed on the ProxyEntry.
	In ProxyEntry, work around GtkEntry::changed which sometimes is emitted
	twice when set_text is called.
	In KiwiEntry.get_selected_by_iter, return None if the text from the 
	model doesn't match the text

2006-03-23  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/filechooser.py: 
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/radiobutton.py:
	* kiwi/ui/widgets/spinbutton.py:
	* kiwi/ui/widgets/textview.py:
	* tests/test_CheckButton.py:
	* tests/test_Label.py:
	* tests/test_SpinButton.py:
	* tests/test_utils.py:
	Rename all widgets to Proxy..., update gazpacho and tests.
